<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SocialApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entry">вход</string>
    <string name="exit">выход</string>
    <string name="registration">регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="registration_complete">Зарегестрироваться</string>
    <string name="auth_complete">Войти</string>
    <string name="feed">Лента</string>
    <string name="event">События</string>
    <string name="event_title">Event</string>
    <string name="logIn">Вход</string>
    <string name="connect_to_event">Присоединиться</string>
    <string name="card_post_author_avatar_description">CardPostAuthorAvatar</string>
    <string name="card_event_picture_description">CardEventPicture</string>
    <string name="card_post_picture_description">CardPostPicture</string>
    <string name="places_job">места работы</string>
    <string name="profile">Профиль</string>
    <string name="common_data">Общие сведения</string>
    <string name="participants_counts">Количество участников:</string>
    <string name="start_screen_image">Start screen image</string>
    <string name="read_next" tools:ignore="TypographyEllipsis">...читать далее</string>
    <string name="registration_failed">Регистрация не удалась</string>
    <string name="login_failed">Ошибка входа</string>
    <string name="invalid_length">Минимальная длина три символа</string>
    <string name="invalid_confirm_password">Пароли не совпадают</string>
    <string name="welcome">Привет</string>
    <string name="is_blank">Поле не должно быть пустым</string>
    <string name="registration_require">Необходимо зарегестрироваться</string>
    <string name="filter_symbol"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890`~!@#$%^*()_-+={}[]|:;\'>,.?/]]></string>
    <string name="filter_symbol_name"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя1234567890 `~!@#$%^*()_-+={}[]|:;\'>,.?/]]></string>
    <string name="try_again">Повторить попытку</string>
    <string name="retry">Повторить</string>
    <string name="something_went_wrong">Что-то пошло не так :(</string>
    <string name="require_authorization">Отсутствует авторизация</string>
    <string name="execute_login">Выполнить вход?</string>
    <string name="positive_answer">Да</string>
    <string name="negative_answer">Нет</string>
    <string name="change">изменить</string>
    <string name="remove">удалить</string>
    <string name="remove_post">Удалить пост?</string>
    <string name="what_is_new_with_you">Что у вас нового?</string>
    <string name="publish">опубликовать</string>
    <string name="permission_denied">Доступ запрещён</string>
    <string name="permission_must_be_granted">Для продолжения необходимо предоставить доступ в настройках \n\nПерейти в настройки?</string>
    <string name="go_to_settings">Перейти в настройки?</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="unknown_error">Ошибка: %1$s</string>
    <string name="download_error">Ошибка загрузки</string>
    <string name="download_error_check_connection">Ошибка загрузки. Проверьте подключение к сети</string>
    <string name="empty_text">""</string>
    <string name="exit_profile">ExitProfile</string>
    <string name="add_job">AddJob</string>
    <string name="more">More</string>
    <string name="context_menu_button">ContextMenuButton</string>
    <string name="load_avatar_by_coil">LoadAvatarByCoil</string>
    <string name="load_image_by_coil">LoadImageByCoil</string>
    <string name="preview_video">PreviewVideo</string>
    <string name="add_event">Add event</string>
    <string name="like_button">Like button</string>
    <string name="share_button">Share button</string>
    <string name="photo_camera_button">Photo camera button</string>
    <string name="attach_file_button">Attach file button</string>
    <string name="speaker_selection_button">Speaker selection button</string>
    <string name="choosing_location_button">Choosing a location button</string>
    <string name="alert_dialog_icon">Alert dialog icon</string>
    <string name="event_timing_button">event timing</string>
    <string name="back_button">Button to return to the previous screen</string>
    <string name="save_button">Save button</string>
    <string name="show_more_button">Show more button</string>
    <string name="play_video_button">Play video button</string>
    <string name="event_date_selection_button">Event date selection button</string>
    <string name="new_event_screen_title">New event</string>
    <string name="remove_button_label">Remove</string>
    <string name="participants_icon">Participants icon</string>
    <string name="event_content_placeholder">Введите текст...</string>
    <string name="event_format_online">Online</string>
    <string name="event_format_offline">Offline</string>
    <string name="event_date">Date</string>
    <string name="event_date_format">dd/MM/yyyy HH:mm</string>
    <string name="type">Type</string>
    <string name="place">Place</string>
    <string name="ok">OK</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="close">Закрыть</string>
    <string name="choose_time">Выбрать время</string>
    <string name="event_datetime_validation_error">event datetime validation error</string>
    <string name="сamera_access_is_required">Требуется доступ к камере</string>
    <string name="media_access_is_required">Требуется доступ к фото и медиа файлам</string>
    <string name="location_access_is_required">Для показа вашего местоположения необходимо предоставить разрешение</string>
    <string name="go_to_settings_to_allow_access">Перейдите в настройки, чтобы разрешить доступ</string>
    <string name="message_is_blank">Сообщение не должно быть пустым</string>
    <string name="date_in_past">Дата проведения события должна быть позже текущей</string>
    <string name="go_over">Перейти</string>
    <string name="speakers">Speakers</string>
    <string name="likers">Likers</string>
    <string name="participants">Participants</string>
    <string name="no_speakers">Желающих выступать ещё нет</string>
    <string name="search_button">Кнопка поиска</string>
    <string name="search_places">Поиск мест</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="coordinates">Координаты</string>
    <string name="coordinates_copied">Координаты скопированы</string>
    <string name="link">Ссылка</string>
    <string name="address">Адрес</string>
    <string name="components">Компоненты</string>
    <string name="object_name">Название</string>
    <string name="working_hours">Часы работы</string>
    <string name="categories">Категории</string>
    <string name="phone_numbers">Телефоны</string>
    <string name="copied_masculine">скопирован</string>
    <string name="copied_feminine">скопирована</string>
    <string name="copied_neuter">скопировано</string>
    <string name="copied_plural">скопированы</string>
    <string name="add_place_button">Добавить место проведения события</string>
    <string name="coordinates_not_specified">Координаты не указаны</string>
    <string name="name_is_missing">Имя отсутствует</string>
    <string name="description_is_missing">Описание отсутствует</string>
    <string name="play_audio">Проигрывать аудио</string>
    <string name="pause_audio">Поставить аудио на паузу</string>
    <string name="unknown_audio_title">Неизвестно</string>
    <string name="unknown_audio_artist">Неизвестно</string>
    <string-array name="eventFormat">
        <item>ONLINE</item>
        <item>OFFLINE</item>
    </string-array>
</resources>