<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etLoginScreenAddLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="256dp"
        android:digits="@string/filter_symbol"
        android:hint="@string/login"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etLoginScreenAddPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="12dp"
        android:digits="@string/filter_symbol"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/etLoginScreenAddLogin"
        app:layout_constraintStart_toStartOf="@+id/etLoginScreenAddLogin"
        app:layout_constraintTop_toBottomOf="@+id/etLoginScreenAddLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bLoginEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/auth_complete"
        app:layout_constraintEnd_toEndOf="@+id/etLoginScreenAddPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginScreenAddPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginScreenAddPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>