<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.AuthFragment">

    <ImageView
        android:id="@+id/ivAuthAvatar"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:paddingHorizontal="16dp"
        android:src="@drawable/network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/start_screen_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bAuthLogIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/entry"
        app:layout_constraintEnd_toEndOf="@+id/ivAuthAvatar"
        app:layout_constraintStart_toStartOf="@+id/ivAuthAvatar"
        app:layout_constraintTop_toBottomOf="@+id/ivAuthAvatar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bAuthRegistration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/bAuthLogIn"
        app:layout_constraintStart_toStartOf="@+id/bAuthLogIn"
        app:layout_constraintTop_toBottomOf="@+id/bAuthLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>