<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCardEventAuthorAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/card_post_author_avatar_description"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/barrierCardEventContentHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_post_author_24" />

        <TextView
            android:id="@+id/tvCardEventAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/tvCardEventPublished"
            app:layout_constraintStart_toEndOf="@id/ivCardEventAuthorAvatar"
            app:layout_constraintTop_toTopOf="@id/ivCardEventAuthorAvatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="author" />

        <TextView
            android:id="@+id/tvCardEventPublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/ivCardEventAuthorAvatar"
            app:layout_constraintStart_toEndOf="@id/ivCardEventAuthorAvatar"
            app:layout_constraintTop_toBottomOf="@id/tvCardEventAuthor"
            tools:text="19:17" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bCardEventMenu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            app:icon="@drawable/ic_context_menu_24"
            app:layout_constraintBottom_toBottomOf="@id/tvCardEventPublished"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvCardEventAuthor" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierCardEventContentHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="ivCardEventAuthorAvatar,tvCardEventPublished,bCardEventMenu" />

        <TextView
            android:id="@+id/tvCardEventEventDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierCardEventContentHeader"
            tools:text="18.07.2023 в 19:00" />

        <TextView
            android:id="@+id/tvCardEventEventFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardEventEventDate"
            tools:text="ONLINE" />

        <TextView
            android:id="@+id/tvCardEventParticipantCountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingStart="16dp"
            android:text="@string/participants_counts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardEventEventFormat"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvCardEventParticipantCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            app:layout_constraintBottom_toBottomOf="@id/tvCardEventParticipantCountText"
            app:layout_constraintStart_toEndOf="@id/tvCardEventParticipantCountText"
            app:layout_constraintTop_toTopOf="@id/tvCardEventParticipantCountText"
            tools:text="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bCardEventConnectToEventButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:text="@string/connect_to_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardEventParticipantCountText" />

        <TextView
            android:id="@+id/tvCardEventDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:text="@string/common_data"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bCardEventConnectToEventButton" />

        <TextView
            android:id="@+id/tvCardEventDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:justificationMode="inter_word"
            android:maxLines="5"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardEventDescriptionText"
            tools:text="сообщение"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/bCardEventMoreContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bottom_text_background_selector"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/read_next"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tvCardEventDescription"
            app:layout_constraintEnd_toEndOf="@id/tvCardEventDescription"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/ivCardEventPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/card_event_picture_description"
            android:focusable="true"
            app:constraint_referenced_ids="tvCardEventDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvCardEventDescription"
            app:srcCompat="@drawable/ic_image_24"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierCardEventContentFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="ivCardEventPicture" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>